# adt-query

./: .gitignore  Cargo.toml  README.md
resources/: core-discovery.xml  discovery.xml  readme.md
src/: adt.rs  api.rs  auth.rs  client.rs  common.rs  core.rs  dispatch.rs  endpoint.rs  error.rs  http.rs  lib.rs  operation.rs  query.rs  response.rs  sap.rs  session.rs  system.rs
src/adt/: api.rs  checkruns.rs  mod.rs  models.rs
src/adt/api/: checkruns.rs  core.rs  object.rs  programs.rs  repository.rs
src/adt/core/: discovery.rs
src/adt/models/: abapsource.rs  adtcomp.rs  adtcore.rs  asx.rs  atom.rs  checkrun.rs  facets.rs  objectproperties.rs  program.rs  tpr.rs  vfs.rs
src/api/: checkruns.rs  common.rs  core.rs  endpoint.rs  mod.rs  object.rs  programs.rs  query.rs  repository.rs  response.rs
src/api/core/: discovery.rs
src/models/: abapsource.rs  checkrun.rs  discovery.rs  facets.rs  objectproperties.rs  program.rs  serialize.rs  tpr.rs  vfs.rs
tests/: checkruns.rs  integration_test.rs  locking.rs  programs.rs  repository.rs  source.rs
tests/common/: mod.rs
