[package]
name = "adt"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
secrecy = "0.10"
fast-xml = "0.23.1"
async-trait = "0.1.88"
derive_builder = "0.20.2"
http = "1.1"


[features]
reqwest = ["dep:reqwest", "dep:tokio"]

[lints.rust]
dead_code = "allow"
