[package]
name = "sapi"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", optional = true }
tokio = { package = "tokio", version = "1", features = ["full"] }
secrecy = "0.10"
fast-xml = "0.23.1"
async-trait = "0.1.88"
derive_builder = "0.20.2"
http = "1.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8.1"
url = "2.5.4"
base64 = "0.22.1"
thiserror = "2.0.12"
tracing = "0.1.41"
arc-swap = "1.7.1"
readonly = "0.2.13"

[features]
adt = []
client = ["dep:reqwest"]

[lints.rust]
dead_code = "allow"

[package.metadata.scripts]
unit-test = "cargo test --lib --all-features"
test-integration = "cargo test --tests --all-features"
test = "cargo test --all-features"
